--- a/public/front/index.html
+++ b/public/front/index.html
@@ -31,7 +31,9 @@
       <link rel="stylesheet"
             href="../bower_components/angular-toastr/dist/angular-toastr.css">
 
+      <link rel="stylesheet" href="styles/dropzone.css">
     <link rel="stylesheet" href="styles/style.css">
+
       <link rel="stylesheet" href="styles/user.style.css">
 
     <!-- endbuild -->
@@ -112,16 +114,20 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
+    <script type="text/javascript" src="assets/js/dropzone.min.js"></script>
+
+    <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
 
     <script src="scripts/controllers/auth.js"></script>
 
     <script src="scripts/controllers/register.js"></script>
+    <script src="scripts/controllers/profile.js"></script>
 
     <script src="scripts/services/auth.js"></script>
 
     <script src="scripts/routes/config.routes.js"></script>
+        <script src="scripts/directives/dropzone.js"></script>
         <!-- endbuild -->
 </body>
 </html>
