--- a/public/front/index.html
+++ b/public/front/index.html
@@ -128,6 +128,7 @@
 
     <script src="scripts/routes/config.routes.js"></script>
         <script src="scripts/directives/dropzone.js"></script>
+        <script src="scripts/services/user.js"></script>
         <!-- endbuild -->
 </body>
 </html>
