--- a/public/front/index.html
+++ b/public/front/index.html
@@ -69,8 +69,6 @@
     <!-- bower:js -->
     <!-- jQuery -->
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <!-- Google Apis -->
-    <script src='//maps.googleapis.com/maps/api/js'></script>
     <!-- Fastclick -->
     <script src="../bower_components/fastclick/lib/fastclick.js"></script>
 
@@ -138,6 +136,11 @@
         <script src="scripts/directives/dropzone.js"></script>
         <script src="scripts/services/user.js"></script>
         <script src="scripts/services/searchservice.js"></script>
+        <script src="scripts/controllers/confirmation.js"></script>
+        <script src="scripts/controllers/map.js"></script>
         <!-- endbuild -->
-</body>
+    <!-- Google Apis -->
+    <script src='//maps.googleapis.com/maps/api/js'></script>
+
+  </body>
 </html>
