--- a/public/front/index.html
+++ b/public/front/index.html
@@ -117,7 +117,17 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src='https://maps.googleapis.com/maps/api/js'></script>
+
     <script type="text/javascript" src="assets/js/dropzone.min.js"></script>
+
+    <script type="text/javascript" src="assets/js/infobox.js"></script>
+    <script type="text/javascript" src="assets/js/richmarker-compiled.js"></script>
+
+    <script type="text/javascript" src="assets/js/markerclusterer.js"></script>
+    <script type="text/javascript" src="assets/js/custom.js"></script>
+    <script type="text/javascript" src="assets/js/maps.js"></script>
+
 
     <script type="text/javascript" src="assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
 
@@ -140,7 +150,6 @@
         <script src="scripts/controllers/map.js"></script>
         <!-- endbuild -->
     <!-- Google Apis -->
-    <script src='//maps.googleapis.com/maps/api/js'></script>
 
   </body>
 </html>
