--- a/public/front/index.html
+++ b/public/front/index.html
@@ -139,6 +139,13 @@
         <script src="scripts/services/user.js"></script>
         <script src="scripts/services/searchservice.js"></script>
         <script src="scripts/controllers/confirmation.js"></script>
+    <script src='https://maps.googleapis.com/maps/api/js'></script>
+
+    <script type="text/javascript" src="assets/js/infobox.js"></script>
+    <script type="text/javascript" src="assets/js/richmarker-compiled.js"></script>
+
+    <script type="text/javascript" src="assets/js/markerclusterer.js"></script>
+
         <script src="scripts/controllers/map.js"></script>
         <!-- endbuild -->
     <!-- Google Apis -->
