--- a/public/front/index.html
+++ b/public/front/index.html
@@ -33,6 +33,7 @@
       <link rel="stylesheet"
             href="../bower_components/angular-toastr/dist/angular-toastr.css">
 
+      <link rel="stylesheet" href="assets/css/owl.carousel.css" type="text/css">
       <link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.css" type="text/css">
       <link rel="stylesheet" href="styles/dropzone.css">
     <link rel="stylesheet" href="styles/style.css">
@@ -147,6 +148,7 @@
     <script type="text/javascript" src="assets/js/markerclusterer.js"></script>
 
         <script src="scripts/controllers/map.js"></script>
+        <script src="scripts/controllers/vendorinfo.js"></script>
         <!-- endbuild -->
     <!-- Google Apis -->
 
