--- a/public/front/assets/external/_modal.html
+++ b/public/front/assets/external/_modal.html
@@ -77,7 +77,7 @@
 
     // Remove modal element form DOM
 
-    $('.modal-window .modal-background, .modal-close').live('click',  function(e){
+    $('.modal-window .modal-background, .modal-close').on('click',  function(e){
         $('.modal-window').addClass('fade_out');
         setTimeout(function() {
             $('.modal-window').remove();
