--- a/public/front/index.html
+++ b/public/front/index.html
@@ -61,10 +61,8 @@
     <div id="outer-wrapper">
         <!-- Inner Wrapper -->
         <div id="inner-wrapper">
-            <header class="header" ui-view="nav"></header>
-            <main ui-view ></main>
-            <footer class="footer" ui-view="footer"></footer>
-        </div>
+              <ui-view ></ui-view>
+          </div>
     </div>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
