--- a/public/front/index.html
+++ b/public/front/index.html
@@ -80,6 +80,7 @@
     <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="../bower_components/angular-touch/angular-touch.min.js"></script>
 
+    <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap-select.min.js"></script>
     <script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script
