--- a/public/front/index.html
+++ b/public/front/index.html
@@ -32,7 +32,10 @@
 
       <link rel="stylesheet"
             href="../bower_components/angular-toastr/dist/angular-toastr.css">
+<link rel="stylesheet" href="../bower_components/v-accordion/dist/v-accordion.min.css">
 
+      <link rel="stylesheet" href="../bower_components/slick-carousel/slick/slick.css">
+      <link rel="stylesheet" href="../bower_components/slick-carousel/slick/slick-theme.css">
       <link rel="stylesheet" href="assets/css/owl.carousel.css" type="text/css">
       <link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.css" type="text/css">
       <link rel="stylesheet" href="styles/dropzone.css">
@@ -81,6 +84,7 @@
     <script src="../bower_components/angular-touch/angular-touch.min.js"></script>
 
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="../bower_components/v-accordion/dist/v-accordion.min.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap-select.min.js"></script>
     <script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script
@@ -112,6 +116,9 @@
     <!-- Angular Scroll -->
     <script src="../bower_components/angular-scroll/angular-scroll.min.js"></script>
     <script src="../bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
+
+    <script src="../bower_components/slick-carousel/slick/slick.js"></script>
+    <script src="../bower_components/angular-slick/dist/slick.js"></script>
 
     <!-- endbower -->
     <!-- endbuild -->
@@ -148,6 +155,9 @@
 
         <script src="scripts/controllers/map.js"></script>
         <script src="scripts/controllers/vendorinfo.js"></script>
+        <script src="scripts/services/bookingservice.js"></script>
+        <script src="scripts/controllers/orderconfirmation.js"></script>
+        <script src="scripts/controllers/facilityview.js"></script>
         <!-- endbuild -->
     <!-- Google Apis -->
 
