--- a/public/front/assets/external/_modal-multichoice.html
+++ b/public/front/assets/external/_modal-multichoice.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html>
 
-<body>
+    <body>
 
-<div class="modal-wrapper">
-    <h3>Select Property</h3>
-    <h2>Multiple Properties in one location</h2>
-    <div class="modal-body">
-        <ul class="items list-unstyled"></ul>
-    </div>
-    <div class="modal-close"><img src="assets/img/close.png"></div>
-</div>
-<div class="modal-background fade_in"></div>
+        <div class="modal-wrapper">
+            <h3>Select Property</h3>
+            <h2>Multiple Properties in one location</h2>
+            <div class="modal-body">
+                <ul class="items list-unstyled"></ul>
+            </div>
+            <div class="modal-close"><img src="assets/img/close.png"></div>
+        </div>
+        <div class="modal-background fade_in"></div>
 
-<!--[if lte IE 9]>
-<script type="text/javascript" src="assets/js/ie-scripts.js"></script>
-<![endif]-->
-</body>
-
+        <!--[if lte IE 9]>
+        <script type="text/javascript" src="assets/js/ie-scripts.js"></script>
+        <![endif]-->
+    </body>
+    <script>
+        $('.modal-window .modal-background, .modal-close').on('click', function (e) {
+            $('.modal-window').addClass('fade_out');
+            setTimeout(function () {
+                $('.modal-window').remove();
+            }, 300);
+        });
+    </script>
 </html>
