--- a/public/front/index.html
+++ b/public/front/index.html
@@ -11,11 +11,11 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-      <link rel="stylesheet"
-            href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
-
-      <link rel="stylesheet" href="assets/css/bootstrap-select.min.css" type="text/css">
       <!-- Font Awesome -->
+      <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css" type="text/css">
+      <link rel="stylesheet" href="assets/css/bootstrap-select.min.css" type="text/css">
+
+
       <link rel="stylesheet"
             href="../bower_components/font-awesome/css/font-awesome.min.css">
 
@@ -36,12 +36,10 @@
 
       <link rel="stylesheet" href="../bower_components/slick-carousel/slick/slick.css">
       <link rel="stylesheet" href="../bower_components/slick-carousel/slick/slick-theme.css">
-      <link rel="stylesheet" href="assets/css/owl.carousel.css" type="text/css">
-      <link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.css" type="text/css">
       <link rel="stylesheet" href="styles/dropzone.css">
-    <link rel="stylesheet" href="styles/style.css">
 
-      <link rel="stylesheet" href="styles/user.style.css">
+      <link rel="stylesheet" href="styles/style.css">
+
 
     <!-- endbuild -->
 
@@ -83,8 +81,9 @@
     <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="../bower_components/angular-touch/angular-touch.min.js"></script>
 
-    <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="../bower_components/v-accordion/dist/v-accordion.min.js"></script>
+    <!-- UI Bootstrap -->
+    <script
+            src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script> <script src="../bower_components/v-accordion/dist/v-accordion.min.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap-select.min.js"></script>
     <script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script
