--- a/public/front/index.html
+++ b/public/front/index.html
@@ -90,6 +90,7 @@
             src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <!-- Angular storage -->
     <script src="../bower_components/ngstorage/ngStorage.min.js"></script>
+    <script src="../bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <!-- Angular Translate -->
     <script
             src="../bower_components/angular-translate/angular-translate.min.js"></script>
