--- a/public/front/assets/external/_modal-multichoice.html
+++ b/public/front/assets/external/_modal-multichoice.html
@@ -4,8 +4,8 @@
     <body>
 
         <div class="modal-wrapper">
-            <h3>Select Property</h3>
-            <h2>Multiple Properties in one location</h2>
+            <h3>Select Venue/Coaching </h3>
+            <h2>Multiple Venues/Coachings in one location</h2>
             <div class="modal-body">
                 <ul class="items list-unstyled"></ul>
             </div>
