improved image sliders

--- a/public/front/index.html
+++ b/public/front/index.html
@@ -43,6 +43,18 @@
       <link rel="stylesheet" href="styles/dropzone.css">
 
       <link rel="stylesheet" href="styles/style.css">
+      <style>
+          .slick-prev:before, .slick-next:before{
+              color: #474747;
+              zoom:1.5;
+          }
+          .slick-prev{
+              left: -50px;
+          }
+          .slick-right{
+              right: -50px;
+          }
+      </style>
     <!-- endbuild -->
   </head>
   <body onunload="" class=" page-homepage  navigation-off-canvas" id="page-top">
