Change in route for showing the packages after saving

--- a/public/front/index.html
+++ b/public/front/index.html
@@ -42,6 +42,7 @@
       <link rel="stylesheet" href="../bower_components/slick-carousel/slick/slick-theme.css">
       <link rel="stylesheet" href="styles/dropzone.css">
 
+      <link rel="stylesheet" href="styles/checkout.css">
       <link rel="stylesheet" href="styles/style.css">
       <style>
           .slick-prev:before, .slick-next:before{
