Solved #11: changed bg color of sidebar to match with theme

--- a/public/front/index.html
+++ b/public/front/index.html
@@ -55,6 +55,12 @@
           .slick-right{
               right: -50px;
           }
+          #sidebar{
+              background-color: inherit;
+          }
+          #sidebar:before{
+              border: none;
+          }
       </style>
     <!-- endbuild -->
   </head>
