Solved Issue#17: footer width and height

--- a/public/front/index.html
+++ b/public/front/index.html
@@ -61,6 +61,12 @@
           #sidebar:before{
               border: none;
           }
+          #page-footer .inner{
+              padding-top: 0px!important;
+          }
+          #page-footer .footer-bottom{
+              margin-top: 0px!important;
+          }
       </style>
     <!-- endbuild -->
   </head>
