--- a/public/front/assets/external/_modal-multichoice.html
+++ b/public/front/assets/external/_modal-multichoice.html
@@ -18,7 +18,7 @@
         <![endif]-->
     </body>
     <script>
-        $('.modal-window .modal-background, .modal-close').on('click', function (e) {
+        $('.modal-window .modal-background, .modal-close, .items').on('click', function (e) {
             $('.modal-window').addClass('fade_out');
             setTimeout(function () {
                 $('.modal-window').remove();
