--- a/public/front/index.html
+++ b/public/front/index.html
@@ -175,6 +175,8 @@
         <script src="scripts/services/bookingservice.js"></script>
         <script src="scripts/controllers/orderconfirmation.js"></script>
         <script src="scripts/controllers/facilityview.js"></script>
+
+    <script src="scripts/controllers/userbookings.js"></script>
         <!-- endbuild -->
     <!-- Google Apis -->
 
