--- a/public/front/index.html
+++ b/public/front/index.html
@@ -135,6 +135,7 @@
 
     <script src="../bower_components/slick-carousel/slick/slick.js"></script>
     <script src="../bower_components/angular-slick/dist/slick.js"></script>
+    <script src='../bower_components/ngMask/dist/ngMask.min.js'></script>
 
     <!-- endbower -->
     <!-- endbuild -->
