Solved Issue #25 : added popups for order cancellations

--- a/public/front/index.html
+++ b/public/front/index.html
@@ -40,6 +40,7 @@
 
       <link rel="stylesheet" href="../bower_components/slick-carousel/slick/slick.css">
       <link rel="stylesheet" href="../bower_components/slick-carousel/slick/slick-theme.css">
+      <link rel="stylesheet" href="../bower_components/sweetalert/lib/sweet-alert.css">
       <link rel="stylesheet" href="styles/dropzone.css">
 
       <link rel="stylesheet" href="styles/checkout.css">
@@ -136,6 +137,8 @@
     <script src="../bower_components/slick-carousel/slick/slick.js"></script>
     <script src="../bower_components/angular-slick/dist/slick.js"></script>
     <script src='../bower_components/ngMask/dist/ngMask.min.js'></script>
+    <script src='../bower_components/sweetalert/lib/sweet-alert.min.js'></script>
+    <script src='../bower_components/angular-sweetalert-promised/SweetAlert.min.js'></script>
 
     <!-- endbower -->
     <!-- endbuild -->
