Solved Issue #28 & Issue # 17 : Checkout page UI enhancements and Footer copyright text

--- a/public/front/index.html
+++ b/public/front/index.html
@@ -68,6 +68,9 @@
           #page-footer .footer-bottom{
               margin-top: 0px!important;
           }
+          input[type="text"]{
+              border: 1px solid #EAEAEA;
+          }
       </style>
     <!-- endbuild -->
   </head>
