--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       <!-- Font Awesome -->
       <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css" type="text/css">
       <!--<link rel="stylesheet" href="assets/css/bootstrap-select.min.css" type="text/css">-->
+      
 
 
 
@@ -45,6 +46,9 @@
 
       <link rel="stylesheet" href="styles/checkout.css">
       <link rel="stylesheet" href="styles/style.css">
+      <link rel="stylesheet"
+            href="bower_components/angular-ui-select/dist/select.css">
+
       <style>
           .slick-prev:before, .slick-next:before{
               color: #474747;
@@ -71,6 +75,20 @@
           input[type="text"]{
               border: 1px solid #EAEAEA;
           }
+          .ui-select-match .btn-default {
+          background: #fff!important;
+          width: 100%;
+          color: black;
+        }
+        .wide{
+            min-width: 92%;
+        }
+        form.main-search{
+            padding-bottom: 5px!important;
+        }
+        .item{
+            height: 400px;
+        }
       </style>
     <!-- endbuild -->
   </head>
@@ -104,7 +122,7 @@
     <!-- UI Bootstrap -->
     <script
             src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script> <script src="bower_components/v-accordion/dist/v-accordion.min.js"></script>
-    <script type="text/javascript" src="assets/js/bootstrap-select.min.js"></script>
+<!--    <script type="text/javascript" src="assets/js/bootstrap-select.min.js"></script>-->
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script
             src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -142,6 +160,7 @@
     <script src='bower_components/ngMask/dist/ngMask.min.js'></script>
     <script src='bower_components/sweetalert/lib/sweet-alert.min.js'></script>
     <script src='bower_components/angular-sweetalert-promised/SweetAlert.min.js'></script>
+    <script src='bower_components/angular-ui-select/dist/select.js'></script>
 
     <!-- endbower -->
     <!-- endbuild -->
@@ -182,6 +201,8 @@
         <script src="scripts/services/bookingservice.js"></script>
         <script src="scripts/controllers/orderconfirmation.js"></script>
         <script src="scripts/controllers/facilityview.js"></script>
+        <script src="scripts/controllers/home.js"></script>
+
 
     <script src="scripts/controllers/userbookings.js"></script>
         <!-- endbuild -->
