Issue #23 : Listing page fixes

--- a/public/index.html
+++ b/public/index.html
@@ -89,6 +89,10 @@
         .item{
             height: 400px;
         }
+        .item .info{
+            height: 80px;
+            overflow: auto;
+        }
       </style>
     <!-- endbuild -->
   </head>
