facility alignment changes

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,15 @@
             height: 80px;
             overflow: auto;
         }
+        h2{
+            margin-bottom: 0;
+        }
+        article.block{
+            padding:5px 0;
+        }
+        .block{
+            padding:0;
+        }
       </style>
     <!-- endbuild -->
   </head>
