solved Issue #39 : my bookings design

--- a/public/index.html
+++ b/public/index.html
@@ -86,10 +86,10 @@
         form.main-search{
             padding-bottom: 5px!important;
         }
-        .item{
+        .thumbnails .item{
             height: 400px;
         }
-        .item .info{
+        .thumbnails .item .info{
             height: 80px;
             overflow: auto;
         }
