Solved Issue #37 : Home page fixes

--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,12 @@
         .block{
             padding:0;
         }
+        .hero-image .inner h1{
+            font-size: 35px;
+        }
+        #page-content{
+            padding-bottom: 0px;
+        }
       </style>
     <!-- endbuild -->
   </head>
