search on all pages

--- a/public/index.html
+++ b/public/index.html
@@ -205,6 +205,8 @@
 
     <script src="scripts/routes/config.routes.js"></script>
         <script src="scripts/directives/dropzone.js"></script>
+
+    <script src="scripts/directives/searchform.js"></script>
         <script src="scripts/services/user.js"></script>
         <script src="scripts/services/searchservice.js"></script>
         <script src="scripts/controllers/confirmation.js"></script>
