--- a/public/site/index.html
+++ b/public/site/index.html
@@ -79,6 +79,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="../front/scripts/controllers/userbookings.js"></script>
+        <script src="scripts/directives/search-form.js"></script>
         <!-- endbuild -->
 </body>
 </html>
