--- a/public/index.html
+++ b/public/index.html
@@ -186,7 +186,7 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
 
-    <script type="text/javascript" src="assets/js/dropzone.min.js"></script>
+    <!--<script type="text/javascript" src="assets/js/dropzone.min.js"></script>-->
 
 
     <script src="bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
@@ -210,12 +210,12 @@
         <script src="scripts/services/user.js"></script>
         <script src="scripts/services/searchservice.js"></script>
         <script src="scripts/controllers/confirmation.js"></script>
-    <script src='https://maps.googleapis.com/maps/api/js'></script>
+    <!--<script src='https://maps.googleapis.com/maps/api/js'></script>-->
 
-    <script type="text/javascript" src="assets/js/infobox.js"></script>
-    <script type="text/javascript" src="assets/js/richmarker-compiled.js"></script>
+    <!--<script type="text/javascript" src="assets/js/infobox.js"></script>-->
+    <!--<script type="text/javascript" src="assets/js/richmarker-compiled.js"></script>-->
 
-    <script type="text/javascript" src="assets/js/markerclusterer.js"></script>
+    <!--<script type="text/javascript" src="assets/js/markerclusterer.js"></script>-->
 
         <script src="scripts/controllers/map.js"></script>
         <script src="scripts/controllers/vendorinfo.js"></script>
