search always show

--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,7 @@
         <script src="scripts/services/user.js"></script>
         <script src="scripts/services/searchservice.js"></script>
         <script src="scripts/controllers/confirmation.js"></script>
-    <!--<script src='https://maps.googleapis.com/maps/api/js'></script>-->
+    <script src='https://maps.googleapis.com/maps/api/js'></script>
 
     <!--<script type="text/javascript" src="assets/js/infobox.js"></script>-->
     <!--<script type="text/javascript" src="assets/js/richmarker-compiled.js"></script>-->
