Issue #28 : removing redundant spaces

--- a/public/index.html
+++ b/public/index.html
@@ -108,6 +108,10 @@
         #page-content{
             padding-bottom: 0px;
         }
+        form section{
+            margin-bottom: 0px;
+        }
+       
       </style>
     <!-- endbuild -->
   </head>
