Issue #38 : fixed Images height

--- a/public/index.html
+++ b/public/index.html
@@ -89,6 +89,12 @@
         .thumbnails .item{
             height: 400px;
         }
+        .thumbnails .item .image a{
+            height: 250px;
+        }
+        .thumbnails .item .image a img{
+            height: 100%;
+        }
         .thumbnails .item .info{
             height: 80px;
             overflow: auto;
