Issue #38 : alignment and height fixes on listing page images

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
             height: 400px;
         }
         .thumbnails .item .image a{
-            height: 250px;
+            height: 220px;
         }
         .thumbnails .item .image a img{
             height: 100%;
@@ -98,6 +98,7 @@
         .thumbnails .item .info{
             height: 80px;
             overflow: auto;
+            border: none;
         }
         h2{
             margin-bottom: 0;
